--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,7 +25,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
-          
+            <!-- <th scope="col">Delete</th> -->
+
           </tr>
         </thead>
         <tbody>
@@ -33,6 +34,10 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+             <td>
+              <form method="POST" action="/urls/<%= id %>/delete">
+                <button type="submit">Delete</form>
+             </td>
             </tr>
            
           <% } %>
