--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,7 +25,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
-            <!-- <th scope="col">Delete</th> -->
+            <th scope="col">Delete</th>
+            <th scope="col">Edit</th>
 
           </tr>
         </thead>
@@ -35,6 +36,11 @@
               <td><%= id %></td>
               <td><%= urls[id] %></td>
              <td>
+              <form action="/urls/<%= id %>/edit">
+                <!-- <input type="text" id="edit" name="urlEdit"> -->
+              <button type= 'edit'>Edit</button></form>
+              </td>
+              <td>
               <form method="POST" action="/urls/<%= id %>/delete">
                 <button type="submit">Delete</form>
              </td>
