--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,8 +16,11 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        
       </div>
     </div>
+    <form class="nav-item nav-link" action="/login" method="POST">
+      <input type="text"  name="username">
+      <button type="submit" class="btn btn-primary">Log in</button>
+    </form>
   </nav>
 </header>
