--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,9 +18,21 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <form class="nav-item nav-link" action="/login" method="POST">
-      <input type="text"  name="username">
-      <button type="submit" class="btn btn-primary">Log in</button>
+    <% if (username) { %>
+    <form method="POST" action="logout">
+    <label >User: <%= username %> </label>
+    <button type="submit" class="btn btn-primary">Logout</button>
+    </form> 
     </form>
+    <% } else { %>
+        <form class="nav-item nav-link" action="/login" method="POST">
+          <input type="text"  name="username">
+          <button type="submit" class="btn btn-primary">Log in</button></form>
+    <% } %>
+  
   </nav>
 </header>
+
+
+
+
