--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,16 +18,16 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if (username) { %>
-    <form method="POST" action="logout">
-    <label >User: <%= username %> </label>
-    <button type="submit" class="btn btn-primary">Logout</button>
-    </form> 
-    </form>
+    <% if (user === undefined) { %>
+      <form class="nav-item nav-link" action="/login" method="POST">
+        <input type="text"  name="email">
+        <button type="submit" class="btn btn-primary">Log in</button></form>
+   
     <% } else { %>
-        <form class="nav-item nav-link" action="/login" method="POST">
-          <input type="text"  name="username">
-          <button type="submit" class="btn btn-primary">Log in</button></form>
+      <form method="POST" action="logout">
+        <label >User: <%= user.email %> </label>
+        <button type="submit" class="btn btn-primary">Logout</button>
+        </form>
     <% } %>
   
   </nav>
