--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -20,11 +20,19 @@
     </div>
     <% if (user === undefined) { %>
       <form class="nav-item nav-link" action="/login" method="POST">
-        <input type="text"  name="email">
+        <!-- <input type="text"  name="email"> -->
         <button type="submit" class="btn btn-primary">Log in</button></form>
-   
+
+        <form class="nav-item nav-link" action="/register" method="POST">
+          <!-- <input type="text"  name="email"> -->
+          <button type="submit" class="btn btn-primary">Register</button></form>
+   <!-- <div class="navbar-nav">
+    <a class="nav-item nav-link" href="/login">Login</a>
+    <a class="nav-item nav-link" href="/register">Register</a>
+   </div> -->
+
     <% } else { %>
-      <form method="POST" action="logout">
+      <form method="POST" action="/logout">
         <label >User: <%= user.email %> </label>
         <button type="submit" class="btn btn-primary">Logout</button>
         </form>
