added register page

--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -24,7 +24,10 @@
 
     <main style="margin: 1em;">
       <h3>Registration</h3>
-      <form class="form-inline" action="/register" method="POST">
+
+      
+      <form class="form-inline" action="/registerAccount" method="POST">
+        
         <div class="form-group mb-2">
           <label for="email">email:</label>
           <input
