--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -26,22 +26,22 @@
       <h3>Login</h3>
       <form class="form-inline" action="/login" method="POST">
         <div class="form-group mb-2">
-          <label for="email">email:</label>
+          <label for="email">Email Address:</label>
           <input
             class="form-control"
             type="email"
             name="email"
-            placeholder=""
+            placeholder="Email Address"
             style="width: 300px; margin: 1em"
           />
         </div>
         <div class="form-group mb-2">
-          <label for="password">password:</label>
+          <label for="password">Password:</label>
           <input
             class="form-control"
             type="password"
             name="password"
-            placeholder=""
+            placeholder="Password"
             style="width: 300px; margin: 1em"></div>
             <button type="log-in" class="btn-primary">Log in</button>
       </form>
