--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -23,30 +23,30 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h3>Registration</h3>
+      <h3>Create Account</h3>
 
-      
+
       <form class="form-inline" action="/registerAccount" method="POST">
         
         <div class="form-group mb-2">
-          <label for="email">email:</label>
+          <label for="email">Email Address:</label>
           <input
             class="form-control"
             type="email"
             name="email"
-            placeholder=""
+            placeholder="Email Address"
             style="width: 300px; margin: 1em"
           />
         </div>
         <div class="form-group mb-2">
-          <label for="password">password:</label>
+          <label for="password">Password:</label>
           <input
             class="form-control"
             type="password"
             name="password"
-            placeholder=""
+            placeholder="Password"
             style="width: 300px; margin: 1em"></div>
-            <button type="submit" class="btn-primary">Submit</button>
+            <button type="submit" class="btn-primary">Register</button>
       </form>
     </main>
     <!-- Bootstrap JS -->
