--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,7 +18,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if (user === undefined) { %>
+    <% if (!user) { %>
       <!-- <form class="nav-item nav-link" action="/login" method="POST">
          <input type="text"  name="email"> 
         <button type="submit" class="btn btn-primary">Log in</button></form>
