--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -26,7 +26,7 @@
       <h3>Create Account</h3>
 
 
-      <form class="form-inline" action="/registerAccount" method="POST">
+      <form class="form-inline" action="/register" method="POST">
         
         <div class="form-group mb-2">
           <label for="email">Email Address:</label>
